# estatecnica

./: .gitignore  README.md  pyproject.toml
notebooks/showcase/time_series/: time_series_data_forecast.ipynb  time_series_data_nature_discovery.ipynb
src/estatecnica/: __init__.py
src/estatecnica/categorical/: __init__.py  analysis.py  plotting.py  stats_tests.py  transforms.py
src/estatecnica/core/: __init__.py  exceptions.py  types.py  validation.py
src/estatecnica/tabular/: __init__.py  analysis.py  plotting.py  stats_tests.py  transforms.py
src/estatecnica/time_series/: __init__.py  analysis.py  forecast.py  plotting.py  simulation.py  stats_tests.py  transforms.py
tests/time_series/: test_analysis.py  test_forecast.py  test_plotting.py  test_simulation.py  test_stats_tests.py  test_transforms.py
time_series_analysis/: time_series_forecast.py
time_series_analysis/draft/: README.md  analyzer.py  forecast.py  plots.py  stats.py  transforms.py
time_series_analysis/draft/tests/: smoke_test.py
